# Drishya

./: ADRecord.pro  ADRecord.pro.user.f0b03a8  ADrecord.qrc  Arthadrishya.pro  CMakeLists.txt  FINANCERECORD.db  Help.cpp  Help.h  Help.ui  Helppage.pro  Qtdata.db  README.md  RecordWindow.cpp  RecordWindow.h  RecordWindow.ui  analysiswindow.cpp  analysiswindow.h  analysiswindow.ui  background.qrc  budgetwindow.cpp  budgetwindow.h  budgetwindow.ui  compare.cpp  compare.h  compare.ui  drishya.qrc  expense.cpp  expense.h  expense.ui  expert.cpp  expert.h  expert.ui  finaldial.cpp  finaldial.h  finaldial.ui  finallogo.qrc  goal.db  goaldata.cpp  goaldata.h  goalspages.pro  (+76 more)
MyApp/: MyApp.pro  MyApp.pro.user.f0b03a8  mainwindow.cpp  mainwindow.h  mainwindow.ui
img/: desktop.ini
